--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+ignore
+
+/public/favicon.png
+/public/favicon.psd
