--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "axios": "^0.26.0",
+    "framer-motion": "^6.2.8",
+    "next": "^12.1.0",
+    "qs": "^6.10.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
+    "strapi-plugin-graphql": "^3.6.8",
+    "styled-components": "^5.3.3"
   }
 }
